[tool.poetry]
name = "recsys-mlops"
version = "0.1.0"
description = ""
authors = ["Sonny <126247253+Sonny-Inkai@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.26.2"
pandas = "1.5.3"
torch = "1.7.1"
ray = "2.9.2"
mlflow = "2.10.0"
bentoml = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
